# jhelper-example-project

./: .gitignore  CMakeLists.txt  README.md  run.template  submission.template  task.template
output/: main.cpp
tasks/: KeyTask.cpp  Mint.cpp
tasks/cf/: CDivideByThree.cpp  CIgraNaFortepiano.cpp
tasks/cf/189/: A.cpp
tasks/opencup/XIX Open Cup named after E.V. Pankratiev. Grand Prix of Siberia, Division 2/: opencup15.cpp
tasks/spoj/: KeyTask.cpp
tasks/uva/: 10139Factovisors.cpp  CodeRefactoring.cpp  CountTheFactors.cpp  DividingCoins.cpp  Divisibility.cpp  FractionsAgain.cpp  Mint.cpp  OutOf5.cpp  PrimeFactors.cpp
testrunner/: main.cpp
